--- a/style.css
+++ b/style.css
@@ -77,23 +77,31 @@ a:hover{
 .footer .container {
 
     display: grid;
-    repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: 1fr auto 1fr;
     align-items: center;
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
-    text-align: center;            
-}
+                
+}       
+
 .footer a{
     color:#e3dc94;
-}
+    justify-self: start;
+    grid-column: 1;
+}   
 .footer span{
     color:#e3dc94;
-}
+    justify-self: center;
+    grid-column: 2;
+}   
 .footer .rss-logo img {
     height: 24px;           
-    width: auto;           
+    width: auto;  
+    justify-self: end;
+    grid-column: 3;         
 }
+
 .section {
     word-wrap: break-word;
     background-color: #e3dc94; 
@@ -106,9 +114,7 @@ a:hover{
 .section#profile {
     grid-column: 1 / -1; /* Занимает всю ширину */
     min-height: 300px; 
-    display: flex;
-    flex-direction: column;
-    gap: 0 px;
+    
 }
 .section-grid {
     display: grid;
@@ -140,7 +146,16 @@ img {
 .profile-text {
     flex: 1;
 }
-
+@media (min-width: 769px) {
+    main .container {
+        grid-template-columns: repeat(2, 1fr); /* 2 колонки */
+    }
+    
+    /* Профиль остается на всю ширину */
+    .section#profile {
+        grid-column: 1 / -1;
+    }
+}
 @media (max-width: 768px) {
     .profile-content {
     flex-direction: column;
@@ -176,13 +191,18 @@ main .container {
     min-height: auto;
     }
 }
+#code{
+    position: relative;
+}
 .section pre {
     margin: 0;
     background-color: #d29e9a;
     border-radius: 8px;
     text-align: left; 
-    padding: 8px;
-    flex-grow: 1;
+    padding: 15px;
+    width: 100%; /* Занимает всю ширину контейнера */
+    box-sizing: border-box; /* Учитываем padding в ширине */
+
 }
 html {
   scroll-behavior: smooth; /* Включает плавную прокрутку */
